[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvm_read"
version = "1.23"
authors = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
license = "MIT"
description = "LabView Measurement file reader"
readme = "readme.rst"
keywords = ['lvm', 'LabView']
requires-python = ">=3.10"
dependencies = [
    "numpy",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "build",
    "pytest",
]

[project.urls]
homepage = "https://github.com/ladisk/lvm_read"
source = "https://github.com/ladisk/lvm_read"

[tool.hatch.build.targets.sdist]
include = ["lvm_read.py"]
